--- a/__1/__1.vcxproj
+++ b/__1/__1.vcxproj
@@ -147,7 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SmartPointer.cpp" />
     <ClCompile Include="__1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SmartPointer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
