--- a/__1/__1.vcxproj
+++ b/__1/__1.vcxproj
@@ -147,17 +147,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SmartPointer.cpp" />
+    <ClCompile Include="Faculty.cpp" />
+    <ClCompile Include="Grade.cpp" />
+    <ClCompile Include="SharedPointer.cpp" />
     <ClCompile Include="Speciality.cpp" />
     <ClCompile Include="Student.cpp" />
     <ClCompile Include="Transaction.cpp" />
+    <ClCompile Include="UniquePointer.cpp" />
     <ClCompile Include="__1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SmartPointer.h" />
+    <ClInclude Include="Faculty.h" />
+    <ClInclude Include="Grade.h" />
+    <ClInclude Include="SharedPointer.h" />
     <ClInclude Include="Speciality.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="Transaction.h" />
+    <ClInclude Include="UniquePointer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
