--- a/__2/__2.vcxproj
+++ b/__2/__2.vcxproj
@@ -116,6 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,10 +140,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Match.cpp" />
+    <ClCompile Include="Sportsman.cpp" />
+    <ClCompile Include="Team.cpp" />
+    <ClCompile Include="WrongDateFormatException.cpp" />
     <ClCompile Include="__2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Match.h" />
+    <ClInclude Include="Sportsman.h" />
+    <ClInclude Include="Team.h" />
     <ClInclude Include="UserInput.h" />
+    <ClInclude Include="WrongDateFormatException.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
