--- a/__2/__2.vcxproj.filters
+++ b/__2/__2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="DuplicateMemberException.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Tasks.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserInput.h">
