--- a/cursed/cursed.vcxproj
+++ b/cursed/cursed.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,11 +142,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cursed.cpp" />
+    <ClCompile Include="DuplicateLoginException.cpp" />
     <ClCompile Include="Menus.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="WrongLoginException.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DuplicateLoginException.h" />
     <ClInclude Include="Menus.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserInput.h" />
