--- a/cursed/cursed.vcxproj.filters
+++ b/cursed/cursed.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DuplicateLoginException.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Admin.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserInput.h">
@@ -51,6 +54,9 @@
       <Filter>Файлы заголовков\Exceptions</Filter>
     </ClInclude>
     <ClInclude Include="DuplicateLoginException.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Admin.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
