--- a/cursed/cursed.vcxproj
+++ b/cursed/cursed.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Admin.cpp" />
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="cursed.cpp" />
     <ClCompile Include="DuplicateLoginException.cpp" />
     <ClCompile Include="Menus.cpp" />
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Admin.h" />
+    <ClInclude Include="Client.h" />
     <ClInclude Include="DuplicateLoginException.h" />
     <ClInclude Include="Menus.h" />
     <ClInclude Include="User.h" />
