--- a/cursed/cursed.vcxproj.filters
+++ b/cursed/cursed.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="IShowable.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ISerializable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
