--- a/cursed/cursed.vcxproj.filters
+++ b/cursed/cursed.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Operation.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="WrongProductException.cpp">
+      <Filter>Исходные файлы\Exceptions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserInput.h">
@@ -103,6 +106,9 @@
     </ClInclude>
     <ClInclude Include="Operation.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="WrongProductException.h">
+      <Filter>Файлы заголовков\Exceptions</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
