--- a/cursed/cursed.vcxproj.filters
+++ b/cursed/cursed.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="UserInput.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="List.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserInput.h">
@@ -117,6 +120,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Client.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Identifiable.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
