--- a/cursed/cursed.vcxproj
+++ b/cursed/cursed.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="OperationList.cpp" />
     <ClCompile Include="Product.cpp" />
     <ClCompile Include="ProductList.cpp" />
+    <ClCompile Include="SortHelper.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="UserInput.cpp" />
     <ClCompile Include="WrongLoginException.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="OperationList.h" />
     <ClInclude Include="Product.h" />
     <ClInclude Include="ProductList.h" />
+    <ClInclude Include="SortHelper.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserInput.h" />
     <ClInclude Include="WrongLoginException.h" />
