--- a/cursed/cursed.vcxproj.filters
+++ b/cursed/cursed.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Файлы ресурсов">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Lists">
       <UniqueIdentifier>{f56c3e7f-8810-47af-a205-65dbcd588405}</UniqueIdentifier>
     </Filter>
@@ -52,6 +48,7 @@
     <ClCompile Include="cursed.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Admin.cpp" />
+    <ClCompile Include="SortHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProductList.h">
@@ -96,6 +93,7 @@
     <ClInclude Include="ClientInfo.h">
       <Filter>Identifiables</Filter>
     </ClInclude>
+    <ClInclude Include="SortHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
