--- a/__6/__6.vcxproj
+++ b/__6/__6.vcxproj
@@ -117,7 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,12 +142,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Drug.cpp" />
+    <ClCompile Include="DrugList.cpp" />
     <ClCompile Include="Menus.cpp" />
     <ClCompile Include="__6.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Drug.h" />
+    <ClInclude Include="DrugList.h" />
     <ClInclude Include="Menus.h" />
+    <ClInclude Include="UserInput.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
